@@ -8,6 +8,8 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Target;
 import java.net.JarURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
@@ -396,8 +398,8 @@ public class AnnotationClassLoader implements Closeable {
     URL jarURL = null;
 
     try {
-      jarURL = new URL("jar:file:" + absolutePathToJarFile + "!/");
-    } catch (MalformedURLException e) {
+      jarURL = new URI("jar:file:" + absolutePathToJarFile + "!/").toURL();
+    } catch (URISyntaxException | MalformedURLException e) {
       processingEnv
           .getMessager()
           .printMessage(Kind.NOTE, "Jar URL " + absolutePathToJarFile + " is malformed");
